--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <h2 class="text-gray-600">@pallavi-gupta-physics</h2>
             </div>
             <button class="focus:ring-2 focus:ring-offset-4 focus:ring-indigo-500 focus:outline-none focus:scale-110 active:border active:border-indigo-500 rounded-md hover:scale-105">
-              <a href="https://www.instagram.com/pal_luvee_gupta/" target="_blank" tabindex="-1"><img src="./assests/link.svg" alt="link-img" class="border-none"></a>
+              <a href="https://www.linkedin.com/in/pallavi-gupta-physics/" target="_blank" tabindex="-1"><img src="./assests/link.svg" alt="link-img" class="border-none"></a>
             </button>
           </div>
 
